SecurityConfig ve environment güncellemeleri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,24 +1,32 @@
 spring.application.name=Backend
-
-spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
-spring.datasource.username=${POSTGRES_USER}
-spring.datasource.password=${POSTGRES_PASSWORD}
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/hyundai_production
+spring.datasource.username=postgres
+spring.datasource.password=Emirhan.1006
 spring.jpa.hibernate.ddl-auto=update
-server.port=${PORT:8080}
 
-# Loglama Ayarlar?
-# Genel log seviyesi
+# Uygulama log seviyesi (root)
 logging.level.root=INFO
-# Kendi paketinizin log seviyesi
+
+# Sadece kendi paketine DEBUG
 logging.level.com.example.backend=DEBUG
-# Spring Framework log seviyesi
+
+# Sadece Spring Security?de DEBUG (güvenlik olaylar?n? görebilmek için)
+logging.level.org.springframework.security=INFO
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+
+# Di?er Spring (web, framework vs) kodlar?n? INFO veya WARN yap, gürültü azals?n
 logging.level.org.springframework.web=INFO
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework=INFO
+logging.level.org.springframework.boot=INFO
+logging.level.org.hibernate=ERROR
+logging.level.org.apache=ERROR
+
 # Log dosyas? ayarlar?
 logging.file.name=logs/application.log
+
 # Konsol log format?
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+
 # Dosya log format?
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
