SecurityConfig ve environment güncellemeleri

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,42 +1,36 @@
+# Uygulama Ad?
 spring.application.name=Backend
-spring.datasource.url=jdbc:postgresql://localhost:5432/hyundai_production
-spring.datasource.username=postgres
-spring.datasource.password=Emirhan.1006
+
+# Veri Kayna?? (Railway gibi ortamlarda env de?i?keninden okunur)
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${JDBC_DATABASE_USERNAME}
+spring.datasource.password=${JDBC_DATABASE_PASSWORD}
+
+# JPA
 spring.jpa.hibernate.ddl-auto=update
 
 # Uygulama log seviyesi (root)
 logging.level.root=INFO
-
-# Sadece kendi paketine DEBUG
 logging.level.com.example.backend=DEBUG
-
-# Sadece Spring Security?de DEBUG (güvenlik olaylar?n? görebilmek için)
 logging.level.org.springframework.security=INFO
 logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-
-# Di?er Spring (web, framework vs) kodlar?n? INFO veya WARN yap, gürültü azals?n
 logging.level.org.springframework.web=INFO
 logging.level.org.springframework=INFO
 logging.level.org.springframework.boot=INFO
 logging.level.org.hibernate=ERROR
 logging.level.org.apache=ERROR
 
-# Log dosyas? ayarlar?
 logging.file.name=logs/application.log
-
-# Konsol log format?
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
-
-# Dosya log format?
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=emirkarabulut10@gmail.com
-spring.mail.password=sjlh dprl odmv bila
+# Mail ayarlar? (örn. Railway'de de env ile override edilebilir)
+spring.mail.host=${MAIL_HOST:smtp.gmail.com}
+spring.mail.port=${MAIL_PORT:587}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.connectiontimeout=5000
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.writetimeout=5000
-
