GitHub Pages için deploy scriptleri ve ayarları eklendi

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-# Uygulama Ad?
+# Application Name
 spring.application.name=Backend
 
-# Veri Kayna?? (Railway gibi ortamlarda env de?i?keninden okunur)
+# Database URL (to be set from Railway or env)
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${JDBC_DATABASE_USERNAME}
 spring.datasource.password=${JDBC_DATABASE_PASSWORD}
@@ -9,7 +9,7 @@ spring.datasource.password=${JDBC_DATABASE_PASSWORD}
 # JPA
 spring.jpa.hibernate.ddl-auto=update
 
-# Uygulama log seviyesi (root)
+# Logging
 logging.level.root=INFO
 logging.level.com.example.backend=DEBUG
 logging.level.org.springframework.security=INFO
@@ -24,7 +24,7 @@ logging.file.name=logs/application.log
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
 logging.pattern.file=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{36} - %msg%n
 
-# Mail ayarlar? (örn. Railway'de de env ile override edilebilir)
+# Mail settings (can be overridden by environment variables)
 spring.mail.host=${MAIL_HOST:smtp.gmail.com}
 spring.mail.port=${MAIL_PORT:587}
 spring.mail.username=${MAIL_USERNAME}
